--- a/index.html
+++ b/index.html
@@ -1,44 +1,115 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>مدیریت حساب شخصی</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>مدیریت هزینه شخصی</title>
+    <!-- استایل‌های آماده (Tailwind) -->
     <script src="https://cdn.tailwindcss.com"></script>
-    
-    <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@100..900&display=swap" rel="stylesheet">
+    <!-- فونت فارسی -->
+    <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet" type="text/css" />
+    <!-- موتور ریاکت -->
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
     <style>
-      body {
-        font-family: 'Vazirmatn', sans-serif;
-        background-color: #0f172a; /* Slate 900 */
-        color: #f8fafc; /* Slate 50 */
-      }
-      /* Custom scrollbar for webkit */
-      ::-webkit-scrollbar {
-        width: 8px;
-      }
-      ::-webkit-scrollbar-track {
-        background: #1e293b; 
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #475569; 
-        border-radius: 4px;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #64748b; 
-      }
+        body { font-family: 'Vazirmatn', sans-serif; }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.1",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
-    "react/": "https://aistudiocdn.com/react@^19.2.1/"
-  }
-}
-</script>
 </head>
-  <body>
+<body class="bg-blue-950 text-white min-h-screen flex items-center justify-center p-4">
+
     <div id="root"></div>
-  </body>
+
+    <script type="text/babel">
+        const { useState, useEffect } = React;
+
+        function App() {
+            const [transactions, setTransactions] = useState(() => {
+                const saved = localStorage.getItem('transactions');
+                return saved ? JSON.parse(saved) : [];
+            });
+            const [desc, setDesc] = useState('');
+            const [amount, setAmount] = useState('');
+            const [type, setType] = useState('expense');
+
+            useEffect(() => {
+                localStorage.setItem('transactions', JSON.stringify(transactions));
+            }, [transactions]);
+
+            const addTransaction = () => {
+                if (!desc || !amount) return;
+                const newTx = {
+                    id: Date.now(),
+                    desc,
+                    amount: parseFloat(amount),
+                    type,
+                    date: new Date().toLocaleDateString('fa-IR')
+                };
+                setTransactions([newTx, ...transactions]);
+                setDesc('');
+                setAmount('');
+            };
+
+            const deleteTransaction = (id) => {
+                setTransactions(transactions.filter(t => t.id !== id));
+            };
+
+            const income = transactions.filter(t => t.type === 'income').reduce((acc, t) => acc + t.amount, 0);
+            const expense = transactions.filter(t => t.type === 'expense').reduce((acc, t) => acc + t.amount, 0);
+            const balance = income - expense;
+
+            return (
+                <div className="w-full max-w-md bg-blue-900 rounded-2xl p-6 shadow-2xl border border-blue-800">
+                    <h1 className="text-2xl font-bold text-center mb-6 text-blue-100">💰 حساب‌کتاب شخصی</h1>
+                    
+                    <div className="bg-gradient-to-r from-blue-600 to-blue-500 p-6 rounded-xl text-center mb-6 shadow-lg transform hover:scale-105 transition duration-300">
+                        <p className="text-blue-100 text-sm mb-1 opacity-80">موجودی فعلی</p>
+                        <h2 className="text-4xl font-bold">{balance.toLocaleString()} <span className="text-sm font-normal">تومان</span></h2>
+                    </div>
+
+                    <div className="flex gap-4 mb-6">
+                        <div className="flex-1 bg-green-900/40 p-3 rounded-xl text-center border border-green-800/50">
+                            <p className="text-green-400 text-xs mb-1">درآمد کل</p>
+                            <p className="text-lg font-bold text-green-300">+{income.toLocaleString()}</p>
+                        </div>
+                        <div className="flex-1 bg-red-900/40 p-3 rounded-xl text-center border border-red-800/50">
+                            <p className="text-red-400 text-xs mb-1">هزینه کل</p>
+                            <p className="text-lg font-bold text-red-300">-{expense.toLocaleString()}</p>
+                        </div>
+                    </div>
+
+                    <div className="bg-blue-950/50 p-4 rounded-xl mb-6 border border-blue-800/50">
+                        <div className="flex gap-2 mb-3">
+                            <button onClick={() => setType('expense')} className={`flex-1 py-2 rounded-lg transition font-bold ${type === 'expense' ? 'bg-red-500 text-white shadow-lg' : 'bg-blue-900 text-gray-400 hover:bg-blue-800'}`}>هزینه</button>
+                            <button onClick={() => setType('income')} className={`flex-1 py-2 rounded-lg transition font-bold ${type === 'income' ? 'bg-green-600 text-white shadow-lg' : 'bg-blue-900 text-gray-400 hover:bg-blue-800'}`}>واریزی</button>
+                        </div>
+                        <input type="number" value={amount} onChange={(e) => setAmount(e.target.value)} placeholder="مبلغ (تومان)" className="w-full p-3 mb-3 bg-blue-900 rounded-lg text-white border border-blue-700 focus:outline-none focus:border-blue-400 transition" />
+                        <input type="text" value={desc} onChange={(e) => setDesc(e.target.value)} placeholder="توضیحات" className="w-full p-3 mb-3 bg-blue-900 rounded-lg text-white border border-blue-700 focus:outline-none focus:border-blue-400 transition" />
+                        <button onClick={addTransaction} className="w-full bg-blue-500 hover:bg-blue-400 text-white py-3 rounded-lg font-bold shadow-lg transition transform active:scale-95">ثبت تراکنش</button>
+                    </div>
+
+                    <div className="space-y-3 max-h-64 overflow-y-auto custom-scrollbar">
+                        {transactions.length === 0 && <p className="text-center text-gray-500 py-2 text-sm">هنوز تراکنشی نیست...</p>}
+                        {transactions.map(t => (
+                            <div key={t.id} className="flex justify-between items-center bg-blue-950 p-3 rounded-lg border-r-4 border-r-blue-500 group">
+                                <button onClick={() => deleteTransaction(t.id)} className="text-red-500 hover:text-red-300 px-2 text-xl opacity-50 group-hover:opacity-100 transition">×</button>
+                                <div className="text-right flex-1 pr-2">
+                                    <p className="font-bold text-sm text-blue-100">{t.desc}</p>
+                                    <p className="text-[10px] text-gray-500">{t.date}</p>
+                                </div>
+                                <p className={`font-mono font-bold text-sm ${t.type === 'income' ? 'text-green-400' : 'text-red-400'}`}>
+                                    {t.type === 'income' ? '+' : '-'}{t.amount.toLocaleString()}
+                                </p>
+                            </div>
+                        ))}
+                    </div>
+                </div>
+            );
+        }
+
+        const root = ReactDOM.createRoot(document.getElementById('root'));
+        root.render(<App />);
+    </script>
+</body>
 </html>
